# backend/docs/swagger.yaml
@@ -612,168 +612,6 @@ paths:
       summary: Upload object to the system
       tags:
       - object
-  /question.createVideoQuestion:
-    post:
-      consumes:
-      - application/json
-      operationId: createVideoQuestion
-      parameters:
-      - description: CreateVideoQuestionBody
-        in: body
-        name: payload
-        required: true
-        schema:
-          $ref: '#/definitions/CreateVideoQuestionBody'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/handlers.Response-CreateVideoQuestionResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handlers.ErrResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handlers.ErrResponse'
-      summary: Create new video question
-      tags:
-      - videoQuestion
-  /question.deleteVideoQuestionById:
-    post:
-      consumes:
-      - application/json
-      operationId: deleteVideoQuestionById
-      parameters:
-      - in: query
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/handlers.Response-string'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handlers.ErrResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/handlers.ErrResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handlers.ErrResponse'
-      summary: Delete video question by id
-      tags:
-      - videoQuestion
-  /question.getVideoQuestionById/{id}:
-    get:
-      consumes:
-      - application/json
-      operationId: getVideoQuestionById
-      parameters:
-      - in: query
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/handlers.Response-GetVideoQuestionByIdResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handlers.ErrResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/handlers.ErrResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handlers.ErrResponse'
-      summary: Get video question by id
-      tags:
-      - videoQuestion
-  /question.getVideoQuestionWorkspaceIdId/{id}:
-    get:
-      consumes:
-      - application/json
-      operationId: getVideoQuestionByWorkspaceId
-      parameters:
-      - in: query
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/handlers.Response-array_GetVideoQuestionByIdResponse'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handlers.ErrResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/handlers.ErrResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handlers.ErrResponse'
-      summary: Get video question by workspace id
-      tags:
-      - videoQuestion
-  /question.updateVideoQuestion:
-    post:
-      consumes:
-      - application/json
-      operationId: updateVideoQuestion
-      parameters:
-      - description: UpdateVideoQuestionBody
-        in: body
-        name: payload
-        required: true
-        schema:
-          $ref: '#/definitions/UpdateVideoQuestionBody'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/handlers.Response-CreateVideoQuestionResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handlers.ErrResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/handlers.ErrResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handlers.ErrResponse'
-      summary: Update video question
-      tags:
-      - videoQuestion
   /user.createUser:
     post:
       consumes:
@@ -919,4 +757,166 @@ paths:
       summary: Submit video interview
       tags:
       - videoInterview
+  /videoQuestion.createVideoQuestion:
+    post:
+      consumes:
+      - application/json
+      operationId: createVideoQuestion
+      parameters:
+      - description: CreateVideoQuestionBody
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/CreateVideoQuestionBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.Response-CreateVideoQuestionResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrResponse'
+      summary: Create new video question
+      tags:
+      - videoQuestion
+  /videoQuestion.deleteVideoQuestionById:
+    post:
+      consumes:
+      - application/json
+      operationId: deleteVideoQuestionById
+      parameters:
+      - in: query
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.Response-string'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.ErrResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrResponse'
+      summary: Delete video question by id
+      tags:
+      - videoQuestion
+  /videoQuestion.getVideoQuestionById/{id}:
+    get:
+      consumes:
+      - application/json
+      operationId: getVideoQuestionById
+      parameters:
+      - in: query
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.Response-GetVideoQuestionByIdResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.ErrResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrResponse'
+      summary: Get video question by id
+      tags:
+      - videoQuestion
+  /videoQuestion.getVideoQuestionWorkspaceIdId/{id}:
+    get:
+      consumes:
+      - application/json
+      operationId: getVideoQuestionByWorkspaceId
+      parameters:
+      - in: query
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/handlers.Response-array_GetVideoQuestionByIdResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.ErrResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrResponse'
+      summary: Get video question by workspace id
+      tags:
+      - videoQuestion
+  /videoQuestion.updateVideoQuestion:
+    post:
+      consumes:
+      - application/json
+      operationId: updateVideoQuestion
+      parameters:
+      - description: UpdateVideoQuestionBody
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/UpdateVideoQuestionBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.Response-CreateVideoQuestionResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.ErrResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrResponse'
+      summary: Update video question
+      tags:
+      - videoQuestion
 swagger: "2.0"
